--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -6,6 +6,7 @@ fastapi == 0.65.2
 fastapi-socketio == 0.0.8
 imagekitio == 2.2.8
 mailer == 0.8.1
+psycopg2 == 2.9.3
 pydantic == 1.8.2
 python-multipart == 0.0.5
 SQLAlchemy == 1.4.11
