--- a/web_client/package.json
+++ b/web_client/package.json
@@ -12,6 +12,7 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "animejs": "^3.2.1",
     "core-js": "^3.6.5",
     "query-string": "^7.1.1",
     "register-service-worker": "^1.7.1",
