--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -4,8 +4,10 @@ cryptography == 35.0.0
 email-validator == 1.1.3
 fastapi == 0.65.2
 fastapi-socketio == 0.0.8
+google-api-python-client == 2.38.0
+google-auth-httplib2 ==  2.6.0
+google-auth-oauthlib == 0.5.0
 imagekitio == 2.2.8
-mailer == 0.8.1
 psycopg2 == 2.9.3
 pydantic == 1.8.2
 python-multipart == 0.0.5
